--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <meta name="author" content="Atlas Messaging">
     <meta name="description" content="Reach everyone you need to immediately with blast messaging. There are no SMS fees and anyone can create a place to blast message many people at once.">
 
-    <link rel="icon"  type="image/x-icon" href="/images/favicon.png" >
+    <link rel="icon"  type="image/x-icon" href="dist/images/favicon.png" >
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Roboto:300,400,500,700" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="/css/style.min.css" type="text/css" />
-
+	<link rel="stylesheet" href="dist/css/style.min.css" type="text/css" />
 	<title>Blast Messaging Made Easy | Atlas Messaging</title>
 </head>
 
-<body>
-	<div id="root">{{{react}}}</div>
+<body class="stretched side-header">
+	<div id="wrapper" class="clearfix"></div>
 
-	<script>window.__PRELOADED_STATE__ = {{{initial}}} </script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC44mPpaMNvENXryYjHBHzjST1UMnYlARk"></script>
-	<script type="text/javascript" src="/js/vendor.min.js"></script>
-	<script type="text/javascript" src="/bundle/commons.js"></script>
-	<script type="text/javascript" src="/bundle/{{bundle}}.js"></script>
+	<script type="text/javascript" src="dist/js/vendor.min.js"></script>
+	<script type="text/javascript" src="dist/bundle/commons.js"></script>
+	<script type="text/javascript" src="dist/bundle/search.js"></script>
 </body>
 </html>
