--- a/places/index.html
+++ b/places/index.html
@@ -13,7 +13,7 @@
 	<title>Blast Messaging Made Easy | Atlas Messaging</title>
 </head>
 
-<body>
+<body style="background:#f9f9f9" onLoad="fetchPlaces()">
 	<div id="page-menu" class="sticky-page-menu">
 		<div id="page-menu-wrap">
 			<div class="container clearfix" style="width:98%;margin-top:10px">
@@ -39,12 +39,34 @@
 	</div>
 
 	<div class="container">
-		<h3>Places</h3>
+		<div class="row">
+			<div class="col-md-4">
+				<h3>Add Place</h3>
+				<input onChange="updatePlace(event)" type="text" name="name" placeholder="Name (required)" class="form-control" /><br />
+				<input onChange="updatePlace(event)" type="text" name="instagram" placeholder="Instagram (required)" class="form-control" /><br />
+				<input onChange="updatePlace(event)" type="text" name="website" placeholder="Website" class="form-control" /><br />
+				<input onChange="updatePlace(event)" type="text" name="address" placeholder="Address (required)" class="form-control" /><br />
+				<input onChange="updatePlace(event)" type="text" name="city" placeholder="City" class="form-control" /><br />
+				<input onChange="updatePlace(event)" type="text" name="state" placeholder="State" class="form-control" /><br />
+				<button onClick="createPlace(event)" class="button button-rnd">Create Place</button>
+
+			</div>
+
+			<div class="col-md-4">
+				<h3>Places</h3>
+				<ol id="place-list">
+
+				</ol>
+
+			</div>
+
+		</div>
 	</div>
 
 
 	<script type="text/javascript" src="../dist/js/vendor.min.js"></script>
 	<script type="text/javascript" src="http://cdn.velocity360.io/dist/turbo.min.js"></script>
+	<script type="text/javascript" src="https://apis.google.com/js/api.js"></script>
 	<script type="text/javascript" src="../dist/js/app.min.js"></script>
 </body>
 </html>
