remove place functionality

--- a/places/index.html
+++ b/places/index.html
@@ -50,6 +50,7 @@
 				<input onChange="updatePlace(event)" type="text" id="input-address" name="address" placeholder="Address (required)" class="form-control" /><br />
 				<input onChange="updatePlace(event)" type="text" id="input-city" name="city" placeholder="City" class="form-control" /><br />
 				<input onChange="updatePlace(event)" type="text" id="input-state" name="state" placeholder="State" class="form-control" /><br />
+				<button onClick="deletePlace(event)" id="delete-button" style="display:none" class="button button-rnd button-red">Delete Place</button>
 				<button onClick="createPlace(event)" id="submit-button" class="button button-rnd">Create Place</button>
 			</div>
 
