main logo dropdown menu

--- a/places/index.html
+++ b/places/index.html
@@ -17,8 +17,15 @@
 	<div id="page-menu" class="sticky-page-menu">
 		<div id="page-menu-wrap">
 			<div class="container clearfix" style="width:98%;margin-top:10px">
-				<div style="font-family:Pathway Gothic One;font-size:30px;font-weight:100" class="menu-title">
-					<a style="color:#333" href="/">Atlas</a>
+				<div class="btn-group">
+					<button style="border:none;font-size:30px;padding:0px;margin:0px" class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="true">
+					Atlas
+					</button>
+					<ul class="dropdown-menu" role="menu">
+						<li><a href="#">Action</a></li>
+						<li><a href="#">Another action</a></li>
+						<li><a href="#">Something else here</a></li>
+					</ul>
 				</div>
 
 				<nav class="one-page-menu">
