--- a/login/index.html
+++ b/login/index.html
@@ -84,7 +84,7 @@
 	                    <h1>Login</h1>
                         <form>
                         	<input type="text" name="email" onChange="updateVisitor(event)" class="form-control" placeholder="Email" /><br />
-                        	<input type="text" name="password" onChange="updateVisitor(event)" class="form-control" placeholder="Password" /><br />
+                        	<input type="password" name="password" onChange="updateVisitor(event)" class="form-control" placeholder="Password" /><br />
                         	<button onClick="login(event)" class="btn btn-info btn-lg">Log In</button>
 
                         </form>
